--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -142,7 +142,8 @@ include $(LUFA_PATH)/LUFA/makefile
 
 
 # List C source files here. (C dependencies are automatically generated.)
-SRC = $(TARGET).c                                                 \
+SRC = 	  f1.c                                                 \
+	  usb.c							\
 	  Descriptors.c                                               \
 	  $(LUFA_SRC_USB)                                             \
 	  $(LUFA_SRC_USBCLASS)										  \
