add serial port for Mac

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -23,7 +23,8 @@ LUFA_PATH    = ./LUFA/LUFA
 CC_FLAGS     = -DUSE_LUFA_CONFIG_HEADER -IConfig/
 LD_FLAGS     =
 AVRDUDE_PROGRAMMER = stk500v2
-AVRDUDE_PORT = /dev/ttyS0
+#AVRDUDE_PORT = /dev/ttyS0
+AVRDUDE_PORT = /dev/tty.PL2303-00004006
 
 
 # Default target
