--- a/femulator/libf1/nbproject/project.properties
+++ b/femulator/libf1/nbproject/project.properties
@@ -41,8 +41,8 @@ javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -84,5 +84,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.hidapi-1.1.jar=../lib/hidapi-1.1-sources.jar
 src.dir=src
 test.src.dir=test
