save today's dev work

--- a/femulator/f1test/nbproject/project.properties
+++ b/femulator/f1test/nbproject/project.properties
@@ -33,7 +33,6 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.libf1.jar}:\
     ${file.reference.hidapi-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -67,13 +66,11 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=f1test.HIDAPITest
+main.class=f1test.demo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.libf1=../libf1
-reference.libf1.jar=${project.libf1}/dist/libf1.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
