--- a/femulator/f1test/nbproject/project.properties
+++ b/femulator/f1test/nbproject/project.properties
@@ -70,7 +70,7 @@ main.class=f1test.demo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
