--- a/femulator/f1test/nbproject/project.properties
+++ b/femulator/f1test/nbproject/project.properties
@@ -27,13 +27,13 @@ dist.jar=${dist.dir}/f1test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.hidapi-1.1.jar=../lib/hidapi-1.1.jar
+file.reference.hidapi-rw-1.1.jar=../lib/hidapi-rw-1.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.hidapi-1.1.jar}
+    ${file.reference.hidapi-rw-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,6 +53,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.hidapi-rw-1.1.jar=../lib/hidapi-rw-1.1-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -70,7 +71,7 @@ main.class=f1test.demo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.7
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -82,5 +83,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.hidapi-rw-1.1.jar=../lib/hidapi-rw-1.1-sources.jar
 src.dir=src
 test.src.dir=test
