--- a/femulator/libf1/nbproject/project.properties
+++ b/femulator/libf1/nbproject/project.properties
@@ -29,13 +29,15 @@ dist.jar=${dist.dir}/libf1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.hidapi-1.1.jar=../lib/hidapi-1.1.jar
+file.reference.hidapi-rw-1.1.jar=../lib/hidapi-rw-1.1.jar
+file.reference.log4j-1.2.16.jar=../lib/log4j-1.2.16.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.hidapi-1.1.jar}
+    ${file.reference.hidapi-rw-1.1.jar}:\
+    ${file.reference.log4j-1.2.16.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +57,6 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.hidapi-1.1.jar=../lib/hidapi-1.1-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -84,6 +85,5 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-source.reference.hidapi-1.1.jar=../lib/hidapi-1.1-sources.jar
 src.dir=src
 test.src.dir=test
