added HID, Mapper, and Midi classes

--- a/femulator/f1test/nbproject/project.properties
+++ b/femulator/f1test/nbproject/project.properties
@@ -28,12 +28,19 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.hidapi-rw-1.1.jar=../lib/hidapi-rw-1.1.jar
+file.reference.log4j-1.2.16.jar=../lib/log4j-1.2.16.jar
+file.reference.xmlpull-1.1.3.1.jar=../lib/xmlpull-1.1.3.1.jar
+file.reference.xstream-1.4.3.jar=../lib/xstream-1.4.3.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.hidapi-rw-1.1.jar}
+    ${file.reference.hidapi-rw-1.1.jar}:\
+    ${reference.libf1.jar}:\
+    ${file.reference.log4j-1.2.16.jar}:\
+    ${file.reference.xstream-1.4.3.jar}:\
+    ${file.reference.xmlpull-1.1.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -67,11 +74,13 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=f1test.demo
+main.class=f1test.F1Test
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.libf1=../libf1
+reference.libf1.jar=${project.libf1}/dist/libf1.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
