--- a/femulator/libf1/nbproject/project.properties
+++ b/femulator/libf1/nbproject/project.properties
@@ -31,13 +31,15 @@ endorsed.classpath=
 excludes=
 file.reference.hidapi-rw-1.1.jar=../lib/hidapi-rw-1.1.jar
 file.reference.log4j-1.2.16.jar=../lib/log4j-1.2.16.jar
+file.reference.xstream-1.4.3.jar=../lib/xstream-1.4.3.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.hidapi-rw-1.1.jar}:\
-    ${file.reference.log4j-1.2.16.jar}
+    ${file.reference.log4j-1.2.16.jar}:\
+    ${file.reference.xstream-1.4.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
