--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@
 /femulator/f1test/build/
 /femulator/f1test/dist/
 /firmware/LUFA
+/femulator/libf1mapper/nbproject/private/
+/femulator/Femulator/nbproject/private/
+/femulator/Femulator/build/
+/femulator/Femulator/Mapper/build/
+/femulator/Femulator/Mapper/nbproject/private/
+/femulator/Femulator/F1Api/build/
+/femulator/Femulator/MapEditor/build/
+/femulator/Femulator/MapViewer/build/
