complete MIDI learn mode

--- a/Femulator/MapEditor/src/com/angryelectron/femulator/mapeditor/Bundle.properties
+++ b/Femulator/MapEditor/src/com/angryelectron/femulator/mapeditor/Bundle.properties
@@ -14,3 +14,4 @@ EditorTopComponent.directionComboBox.toolTipText=Map MIDI to F1, or F1 to MIDI
 EditorTopComponent.learnButton.text=Learn
 EditorTopComponent.saveButton.text=Save
 EditorTopComponent.nameLabel.text=Name
+EditorTopComponent.cancelButton.text=Cancel
