--- a/Femulator/nbproject/private/platform-private.properties
+++ b/Femulator/nbproject/private/platform-private.properties
@@ -1,1 +1,1 @@
-user.properties.file=/home/likewise-open/ZIPTREK/abythell/.netbeans/7.2.1/build.properties
+user.properties.file=/Users/abythell/Library/Application Support/NetBeans/7.2.1/build.properties
