--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@
 /Femulator/MapEditor/build/
 /Femulator/MapViewer/build/
 /Femulator/F1Api/build/
+/femulator/F1Api/build/
+/femulator/MapEditor/build/
+/femulator/MapViewer/build/
+/Femulator/F1Api/nbproject/private/
+/Femulator/MapEditor/nbproject/private/
+/Femulator/MapViewer/nbproject/private/
+/Femulator/nbproject/private/
