useable but incomplete play mode

--- a/Femulator/nbproject/project.properties
+++ b/Femulator/nbproject/project.properties
@@ -9,7 +9,9 @@ auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=true
 modules=\
     ${project.com.angryelectron.femulator.mapviewer}:\
     ${project.com.angryelectron.femulator.f1api}:\
-    ${project.com.angryelectron.femulator.mapeditor}
+    ${project.com.angryelectron.femulator.mapeditor}:\
+    ${project.com.angryelectron.log4j}
 project.com.angryelectron.femulator.f1api=F1Api
 project.com.angryelectron.femulator.mapeditor=MapEditor
 project.com.angryelectron.femulator.mapviewer=MapViewer
+project.com.angryelectron.log4j=Log4j
