--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /Femulator/MapEditor/nbproject/private/
 /Femulator/MapViewer/nbproject/private/
 /Femulator/nbproject/private/
+/Femulator/Log4j/build/
