--- a/Femulator/F1Api/nbproject/project.properties
+++ b/Femulator/F1Api/nbproject/project.properties
@@ -1,5 +1,5 @@
+file.reference.guava-14.0-rc1.jar=release/modules/ext/guava-14.0-rc1.jar
 file.reference.hidapi-rw-1.1.jar=release/modules/ext/hidapi-rw-1.1.jar
-file.reference.log4j-1.2.16.jar=release/modules/ext/log4j-1.2.16.jar
 file.reference.xstream-1.4.4.jar=release/modules/ext/xstream-1.4.4.jar
 javac.source=1.6
 javac.compilerargs=-Xlint -Xlint:-serial
