fix issue with command line building

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /Femulator/MapViewer/nbproject/private/
 /Femulator/nbproject/private/
 /Femulator/Log4j/build/
+/nbproject/private/
+/Femulator/Log4j/nbproject/private/
