add build instructions

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,6 @@
 /Femulator/MapViewer/nbproject/private/
 /Femulator/nbproject/private/
 /Femulator/Log4j/build/
-/nbproject/private/
 /Femulator/Log4j/nbproject/private/
+/Femulator/dist/
+/Femulator/netbeans721
